added export of technologies

--- a/RQ3.ipynb
+++ b/RQ3.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "verbal-leather",
+   "execution_count": 6,
+   "id": "killing-squad",
    "metadata": {},
    "outputs": [
     {
@@ -22,14 +22,19 @@
     "import matplotlib.pyplot as plt\n",
     "import spacy \n",
     "from spacy.matcher import Matcher\n",
+    "from spacy.scorer import Scorer\n",
+    "from spacy.training import Example\n",
+    "from spacy.tokens import Doc\n",
     "import pandas as pd\n",
     "import re\n",
     "from collections import Counter\n",
     "import sklearn\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.metrics import f1_score\n",
     "import numpy as np\n",
     "import copy\n",
+    "import csv\n",
     "\n",
     "filepath = os.path.join(os.getcwd(), 'QueryResults_sample.csv')\n",
     "\n",
@@ -40,15 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "crucial-clinton",
+   "execution_count": 2,
+   "id": "neither-purchase",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'scientific-computing', 'cuda', 'data-manipulation', 'reduction', 'backpropagation', 'tic-tac-toe', 'stanford-nlp', 'data-analysis', 'haar-classifier', 'azure-machine-learning-studio', 'dirichlet', 'data-visualization', 'face-recognition', 'smo', 'io', 'audio', 'plot', 'predictionio', 'compilation', 'genetic-algorithm', 'tagged-corpus', 'gaussian', 'java', 'confusion-matrix', 'optimization', 'data-structures', 'grouping', 'scala', 'time-series', 'twitter', 'random', 'mex', 'distributed-computing', 'c#', 'object-recognition', 'r-caret', 'gearman', 'metrics', 'object-detection', 'image', 'pandas', 'indices', 'image-processing', 'ranking', 'orange', 'id3', 'dlib', 'chess', 'feature-extraction', 'tf-idf', 'api', 'logistic-regression', 'numpy', 'test-data', 'decision-tree', 'mysql', 'implementation', 'amazon-web-services', 'collaborative-filtering', 'mathematical-optimization', 'python-2.7', 'treemodel', 'single-sign-on', 'gate', 'black-box', 'prediction', 'hessian-matrix', 'mp3', 'standardized', 'hadoop', 'multilabel-classification', 'arff', 'pattern-matching', 'naivebayes', 'conv-neural-network', 'csv', 'prolog', 'speech-recognition', 'algorithmic-trading', 'svm', 'lstm', 'python', 'linear-regression', 'cors', 'mixture-model', 'authentication', 'apache-spark-mllib', 'ruby', 'training-data', 'kaggle', 'apache-spark', 'topic-modeling', 'precision-recall', 'mfcc', 'genetic-programming', 'cryptography', 'biometrics', 'artificial-intelligence', 'weka', 'kernel', 'perceptron', 'gnuplot', 'hierarchical-clustering', 'pos-tagger', 'feature-selection', 'algorithm', 'ensemble-learning', 'random-forest', 'recommendation-engine', 'node.js', 'convolution', 'differentiation', 'nltk', 'gps', 'pylearn', 'sparse-matrix', 'opencv', 'euclidean-distance', 'dbn', 'c++', 'knn', 'filesize', 'sift', 'ssas', 'summarization', 'macos', 'wordnet', 'cvx', 'feature-detection', 'pam', 'regex', 'azure', 'word2vec', 'k-means', 'datumbox', 'search', 'vector', 'cascade-classifier', 'vgg-net', 'classification', 'logarithm', 'scipy', 'maven', 'cluster-analysis', 'missing-data', 'entity-framework', 'neural-network', 'google-analytics', 'gpu', 'security', 'r', 'nearest-neighbor', 'bayesian-networks', 'rbm', 'pruning', 'document-classification', 'fuzzy-search', 'theano', 'libsvm', 'elki', 'svmlight', 'simplecv', 'probability-density', 'normalization', 'large-files', 'supervised-learning', 'computer-science', 'e-commerce', 'gradient', 'lda', 'machine-learning', 'evolutionary-algorithm', 'vectorization', 'mahout', 'auc', 'python-3.x', 'probability', 'pattern-recognition', 'keyword-search', 'matrix', 'gradient-descent', 'pom.xml', 'cloudera', 'reservoir-sampling', 'matlab', 'arrays', 'glm', 'pmml', 'q-learning', 'measurement', 'detection', 'text-analysis', 'caffe', 'sampling', 'pybrain', 'linear-algebra', 'oauth', 'viola-jones', 'projection', 'calibration', 'data-mining', 'matplotlib', 'pca', 'deep-learning', 'kernel-density', 'information-retrieval', 'office365', 'anpr', 'mapreduce', 'reinforcement-learning', 'cross-validation', 'porter-stemmer', 'liblinear', 'math', 'tokenize', 'image-recognition', 'microsoft-account', 'signal-processing', 'google-analytics-api', 'text-mining', 'statistics', 'unsupervised-learning', 'evaluation', 'bayesian', 'computer-vision', 'text', 'mallet', 'opennlp', 'quadratic-programming', 'nlp', 'php', 'elasticsearch', 'hashmap', 'contour', 'encog', 'text-classification', 'apriori', 'regression', 'scikit-learn', 'linux', 'cluster-computing', 'parameter-passing'}\n"
+      "{'encog', 'math', 'pybrain', 'search', 'knn', 'ensemble-learning', 'q-learning', 'euclidean-distance', 'feature-extraction', 'document-classification', 'scala', 'decision-tree', 'kaggle', 'missing-data', 'stanford-nlp', 'numpy', 'supervised-learning', 'smo', 'vectorization', 'svm', 'arff', 'perceptron', 'scipy', 'cryptography', 'metrics', 'php', 'collaborative-filtering', 'nlp', 'keyword-search', 'cascade-classifier', 'biometrics', 'dirichlet', 'datumbox', 'pam', 'apache-spark', 'twitter', 'kernel', 'compilation', 'e-commerce', 'dlib', 'oauth', 'haar-classifier', 'simplecv', 'confusion-matrix', 'ranking', 'test-data', 'object-recognition', 'dbn', 'pos-tagger', 'entity-framework', 'cuda', 'data-visualization', 'r-caret', 'arrays', 'bayesian-networks', 'cluster-analysis', 'matlab', 'neural-network', 'vgg-net', 'matplotlib', 'azure-machine-learning-studio', 'rbm', 'security', 'image-processing', 'node.js', 'tokenize', 'object-detection', 'io', 'java', 'python', 'genetic-programming', 'sparse-matrix', 'measurement', 'google-analytics', 'mahout', 'regression', 'precision-recall', 'mixture-model', 'tic-tac-toe', 'feature-selection', 'porter-stemmer', 'evolutionary-algorithm', 'lda', 'multilabel-classification', 'data-analysis', 'prediction', 'gps', 'wordnet', 'elasticsearch', 'hadoop', 'c++', 'predictionio', 'cors', 'pom.xml', 'google-analytics-api', 'pmml', 'quadratic-programming', 'large-files', 'hierarchical-clustering', 'indices', 'deep-learning', 'projection', 'computer-vision', 'implementation', 'time-series', 'logistic-regression', 'pandas', 'gate', 'single-sign-on', 'image-recognition', 'distributed-computing', 'probability-density', 'calibration', 'text-analysis', 'cross-validation', 'cluster-computing', 'caffe', 'training-data', 'lstm', 'pylearn', 'classification', 'text-classification', 'genetic-algorithm', 'apriori', 'speech-recognition', 'treemodel', 'parameter-passing', 'mp3', 'mallet', 'random', 'cloudera', 'matrix', 'amazon-web-services', 'grouping', 'sift', 'python-3.x', 'conv-neural-network', 'nearest-neighbor', 'r', 'algorithm', 'fuzzy-search', 'signal-processing', 'pattern-matching', 'mfcc', 'reservoir-sampling', 'statistics', 'opennlp', 'detection', 'linear-regression', 'convolution', 'filesize', 'id3', 'weka', 'face-recognition', 'apache-spark-mllib', 'glm', 'unsupervised-learning', 'csv', 'prolog', 'normalization', 'probability', 'pattern-recognition', 'naivebayes', 'data-manipulation', 'image', 'data-mining', 'mysql', 'mathematical-optimization', 'text-mining', 'gaussian', 'gradient-descent', 'differentiation', 'azure', 'cvx', 'information-retrieval', 'plot', 'tagged-corpus', 'tf-idf', 'ruby', 'c#', 'topic-modeling', 'audio', 'optimization', 'black-box', 'linear-algebra', 'scientific-computing', 'data-structures', 'regex', 'contour', 'reduction', 'vector', 'office365', 'computer-science', 'svmlight', 'orange', 'summarization', 'backpropagation', 'liblinear', 'gradient', 'viola-jones', 'pruning', 'text', 'sampling', 'linux', 'artificial-intelligence', 'logarithm', 'recommendation-engine', 'random-forest', 'auc', 'algorithmic-trading', 'feature-detection', 'opencv', 'pca', 'standardized', 'mex', 'kernel-density', 'hashmap', 'maven', 'api', 'authentication', 'bayesian', 'scikit-learn', 'reinforcement-learning', 'gpu', 'anpr', 'python-2.7', 'k-means', 'word2vec', 'microsoft-account', 'nltk', 'libsvm', 'theano', 'ssas', 'mapreduce', 'gearman', 'gnuplot', 'macos', 'hessian-matrix', 'chess', 'evaluation', 'elki'}\n"
      ]
     }
    ],
@@ -57,7 +62,7 @@
     "df = pd.DataFrame(stack_posts[0:500])\n",
     "df = df.drop_duplicates([\"QuestionId\"])\n",
     "df = df.sort_values(by=[\"QuestionId\"])\n",
-    "df.duplicated([\"QuestionId\"])\n",
+    "#df.duplicated([\"QuestionId\"])\n",
     "\n",
     "\n",
     "# get all tags of questions\n",
@@ -71,9 +76,9 @@
     "    for tag in tags.split():               \n",
     "        tag_list.append(tag)\n",
     "\n",
-    "tag_set = set(tag_list)\n",
+    "#tag_set = set(tag_list)\n",
     "# filter term 'machine-learning', because sql export filters for this term\n",
-    "tag_list = list(filter(lambda a: a != 'machine-learning', tag_list))\n",
+    "tag_set = set(filter(lambda a: a != 'machine-learning', tag_list))\n",
     "tag_Counter = Counter(tag_list)\n",
     "\n",
     "print(tag_set)"
@@ -81,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "convinced-japanese",
+   "execution_count": 4,
+   "id": "hindu-apparel",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +117,10 @@
     "                       {'POS': 'PROPN', 'OP': '+'}\n",
     "                      ]\n",
     "\n",
-    "\n",
+    "ml_pattern1 = [{'LOWER': 'machine', 'OP': '!'},\n",
+    "                       #{'TEXT': '-', 'OP': '!'},\n",
+    "                       {'LOWER': 'learning', 'OP': '!'}\n",
+    "                      ]\n",
     "\n",
     "\n",
     "word_set = set()\n",
@@ -120,112 +128,88 @@
     "matcher.add(\"match_technology1\", [technology_pattern1])\n",
     "matcher.add(\"match_technology2\", [technology_pattern2])\n",
     "matcher.add(\"match_technology3\", [technology_pattern3])\n",
+    "#matcher.add(\"unmatch_ml_pattern\", [ml_pattern1])\n",
     "\n",
-    "for text in stack_posts[\"AnswerBody\"][100:5000]:\n",
+    "for text in stack_posts[\"AnswerBody\"][500:2000]:\n",
     "    text = re.sub(regex_pattern, '', text, flags=re.I)\n",
+    "    text = re.sub('\\(|\\)', ' ', text, flags=re.I)    \n",
     "    doc = nlp(text)    \n",
     "    \n",
     "    matches = matcher(doc)\n",
     "        \n",
     "    for match_id, start, end in matches:\n",
     "        word_set.add(doc[start:end])       \n",
-    "           \n",
     "print(\"finished\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "improved-reservation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Term similarity\n",
-    "# second try\n",
-    "\n",
-    "# loop through relavant words and get their vectors\n",
-    "technology = []\n",
-    "for tag in tag_set:\n",
-    "    term_vector = []    \n",
-    "    tag_doc = nlp(str(tag))\n",
-    "    tag_vector = tag_doc.vector    \n",
-    "    \n",
-    "    for i,span in enumerate(wordlist):\n",
-    "        if span.doc != wordlist[i-1].doc:\n",
-    "            span_vector = span.vector        \n",
-    "            # add these vectors to term_vector of this word        \n",
-    "            if tag_doc.similarity(span) >= 0.7:\n",
-    "            #if cosine_similarity([tag_vector], [span_vector])[0][0] >= 0.7:\n",
-    "                #technology.append(span)\n",
-    "                print(span.doc)\n",
-    "                print(span.text)\n",
-    "                print(\" \")\n",
-    "            \n",
-    "            \n",
-    "print(\"finished\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "residential-cooperation",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp = spacy.load(\"en_core_web_lg\")\n",
-    "matcher = Matcher(nlp.vocab)\n",
-    "doc = nlp(\"In Encog SVM is just a classification Scikit-learn or regression Spark MLib model and can be used mostly interchangably C++ with other model types.  I modified the hello Java World XOR example to use it, you can see the results below.This is a decent intro to them:  This is a more basic intro to modeling in general, I wrote it for neural networks, but it applies to SVM as well:\")\n",
-    "\n",
-    "technology_pattern1 = [{'OP': '+', 'POS': 'NOUN'},\n",
-    "                               {'POS': 'PROPN', 'OP': '+'}]\n",
-    "\n",
-    "matcher.add(\"Propntest\", [technology_pattern1])\n",
-    "matches = matcher(doc)\n",
-    "for match_id, start, end in matches:\n",
-    "    print(doc[start:end].text)    \n",
-    "    print(\" \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "persistent-large",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = nlp(\"In Encog SVM is just a classification Scikit-learn or regression Spark MLib model and can be used mostly interchangably C++ with other model types.  I modified the hello Java World XOR example to use it, you can see the results below.This is a decent intro to them:  This is a more basic intro to modeling in general, I wrote it for neural networks, but it applies to SVM as well:\")\n",
-    "\n",
-    "for token in doc:\n",
-    "    print(token.text)\n",
-    "    print(token.pos_)\n",
-    "    print(\" \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "diverse-minimum",
+   "execution_count": 14,
+   "id": "ecological-export",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.019616807984967306"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-14-3141c5bde907>:13: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n",
+      "  if tag_doc.similarity(span) >= 0.8:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished\n"
+     ]
     }
    ],
    "source": [
-    "\n"
+    "# Term similarity\n",
+    "\n",
+    "# loop through relavant words and get their vectors\n",
+    "technology_list = []\n",
+    "technology_string_list = []\n",
+    "technology_counter = Counter()\n",
+    "for tag in tag_set:\n",
+    "    term_vector = []    \n",
+    "    tag_doc = nlp(str(tag))\n",
+    "    #tag_vector = tag_doc.vector    \n",
+    "    \n",
+    "    for i,span in enumerate(word_set):        \n",
+    "        if tag_doc.similarity(span) >= 0.8:\n",
+    "        # very slow\n",
+    "        # if cosine_similarity([tag_vector], [span_vector])[0][0] >= 0.7:\n",
+    "            if span.text not in technology_string_list:\n",
+    "                technology_list.append(span)\n",
+    "                technology_string_list.append(span.text)\n",
+    "            technology_counter[span.text] = technology_counter[span.text] + 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"finished\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "public-proceeding",
+   "id": "administrative-november",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for technology in technology_list:\n",
+    "    print(technology)\n",
+    "    with open('technology_list.txt', 'a', newline='') as myfile:\n",
+    "        wr = csv.writer(myfile)\n",
+    "        wr.writerow([technology])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "permanent-uzbekistan",
    "metadata": {},
    "outputs": [],
    "source": []
