--- a/RQ3.ipynb
+++ b/RQ3.ipynb
@@ -2,21 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "killing-squad",
+   "execution_count": 60,
+   "id": "2478025d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loaded csv data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Load csv data\n",
-    "\n",
     "import os\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"TRUE\"\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,6 +15,7 @@
     "from spacy.scorer import Scorer\n",
     "from spacy.training import Example\n",
     "from spacy.tokens import Doc\n",
+    "from spacy.util import filter_spans\n",
     "import pandas as pd\n",
     "import re\n",
     "from collections import Counter\n",
@@ -36,6 +27,19 @@
     "import copy\n",
     "import csv\n",
     "\n",
+    "# configuration\n",
+    "n_tag_posts = 500\n",
+    "n_answer_posts = 2000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53651360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load csv data\n",
     "filepath = os.path.join(os.getcwd(), 'QueryResults_sample.csv')\n",
     "\n",
     "stack_posts = pd.read_csv(filepath, sep = \",\")\n",
@@ -45,21 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "neither-purchase",
+   "execution_count": 61,
+   "id": "7344f623",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'encog', 'math', 'pybrain', 'search', 'knn', 'ensemble-learning', 'q-learning', 'euclidean-distance', 'feature-extraction', 'document-classification', 'scala', 'decision-tree', 'kaggle', 'missing-data', 'stanford-nlp', 'numpy', 'supervised-learning', 'smo', 'vectorization', 'svm', 'arff', 'perceptron', 'scipy', 'cryptography', 'metrics', 'php', 'collaborative-filtering', 'nlp', 'keyword-search', 'cascade-classifier', 'biometrics', 'dirichlet', 'datumbox', 'pam', 'apache-spark', 'twitter', 'kernel', 'compilation', 'e-commerce', 'dlib', 'oauth', 'haar-classifier', 'simplecv', 'confusion-matrix', 'ranking', 'test-data', 'object-recognition', 'dbn', 'pos-tagger', 'entity-framework', 'cuda', 'data-visualization', 'r-caret', 'arrays', 'bayesian-networks', 'cluster-analysis', 'matlab', 'neural-network', 'vgg-net', 'matplotlib', 'azure-machine-learning-studio', 'rbm', 'security', 'image-processing', 'node.js', 'tokenize', 'object-detection', 'io', 'java', 'python', 'genetic-programming', 'sparse-matrix', 'measurement', 'google-analytics', 'mahout', 'regression', 'precision-recall', 'mixture-model', 'tic-tac-toe', 'feature-selection', 'porter-stemmer', 'evolutionary-algorithm', 'lda', 'multilabel-classification', 'data-analysis', 'prediction', 'gps', 'wordnet', 'elasticsearch', 'hadoop', 'c++', 'predictionio', 'cors', 'pom.xml', 'google-analytics-api', 'pmml', 'quadratic-programming', 'large-files', 'hierarchical-clustering', 'indices', 'deep-learning', 'projection', 'computer-vision', 'implementation', 'time-series', 'logistic-regression', 'pandas', 'gate', 'single-sign-on', 'image-recognition', 'distributed-computing', 'probability-density', 'calibration', 'text-analysis', 'cross-validation', 'cluster-computing', 'caffe', 'training-data', 'lstm', 'pylearn', 'classification', 'text-classification', 'genetic-algorithm', 'apriori', 'speech-recognition', 'treemodel', 'parameter-passing', 'mp3', 'mallet', 'random', 'cloudera', 'matrix', 'amazon-web-services', 'grouping', 'sift', 'python-3.x', 'conv-neural-network', 'nearest-neighbor', 'r', 'algorithm', 'fuzzy-search', 'signal-processing', 'pattern-matching', 'mfcc', 'reservoir-sampling', 'statistics', 'opennlp', 'detection', 'linear-regression', 'convolution', 'filesize', 'id3', 'weka', 'face-recognition', 'apache-spark-mllib', 'glm', 'unsupervised-learning', 'csv', 'prolog', 'normalization', 'probability', 'pattern-recognition', 'naivebayes', 'data-manipulation', 'image', 'data-mining', 'mysql', 'mathematical-optimization', 'text-mining', 'gaussian', 'gradient-descent', 'differentiation', 'azure', 'cvx', 'information-retrieval', 'plot', 'tagged-corpus', 'tf-idf', 'ruby', 'c#', 'topic-modeling', 'audio', 'optimization', 'black-box', 'linear-algebra', 'scientific-computing', 'data-structures', 'regex', 'contour', 'reduction', 'vector', 'office365', 'computer-science', 'svmlight', 'orange', 'summarization', 'backpropagation', 'liblinear', 'gradient', 'viola-jones', 'pruning', 'text', 'sampling', 'linux', 'artificial-intelligence', 'logarithm', 'recommendation-engine', 'random-forest', 'auc', 'algorithmic-trading', 'feature-detection', 'opencv', 'pca', 'standardized', 'mex', 'kernel-density', 'hashmap', 'maven', 'api', 'authentication', 'bayesian', 'scikit-learn', 'reinforcement-learning', 'gpu', 'anpr', 'python-2.7', 'k-means', 'word2vec', 'microsoft-account', 'nltk', 'libsvm', 'theano', 'ssas', 'mapreduce', 'gearman', 'gnuplot', 'macos', 'hessian-matrix', 'chess', 'evaluation', 'elki'}\n"
+      "{'supervised-learning', 'tic-tac-toe', 'apriori', 'algorithmic-trading', 'sampling', 'projection', 'cascade-classifier', 'signal-processing', 'ruby', 'computer-science', 'cryptography', 'fuzzy-search', 'mallet', 'statistics', 'kernel-density', 'gearman', 'azure-machine-learning-studio', 'r', 'treemodel', 'authentication', 'neural-network', 'tf-idf', 'reinforcement-learning', 'pos-tagger', 'dlib', 'black-box', 'word2vec', 'data-analysis', 'matrix', 'test-data', 'vgg-net', 'cuda', 'vectorization', 'deep-learning', 'pylearn', 'python-3.x', 'liblinear', 'metrics', 'distributed-computing', 'time-series', 'cvx', 'ensemble-learning', 'large-files', 'mahout', 'lstm', 'gnuplot', 'matplotlib', 'probability-density', 'python', 'confusion-matrix', 'precision-recall', 'security', 'api', 'pam', 'tokenize', 'bayesian', 'knn', 'audio', 'sift', 'object-recognition', 'text', 'scikit-learn', 'mysql', 'algorithm', 'kernel', 'cloudera', 'differentiation', 'e-commerce', 'genetic-programming', 'implementation', 'perceptron', 'pybrain', 'scala', 'mapreduce', 'node.js', 'pca', 'decision-tree', 'hadoop', 'linear-algebra', 'chess', 'image-recognition', 'standardized', 'r-caret', 'maven', 'image-processing', 'unsupervised-learning', 'naivebayes', 'viola-jones', 'evolutionary-algorithm', 'twitter', 'data-mining', 'datumbox', 'pmml', 'mixture-model', 'collaborative-filtering', 'reduction', 'mfcc', 'convolution', 'anpr', 'gaussian', 'pattern-matching', 'text-analysis', 'speech-recognition', 'google-analytics-api', 'summarization', 'smo', 'compilation', 'tagged-corpus', 'theano', 'reservoir-sampling', 'nearest-neighbor', 'regex', 'indices', 'mex', 'dirichlet', 'bayesian-networks', 'evaluation', 'apache-spark-mllib', 'glm', 'python-2.7', 'porter-stemmer', 'ranking', 'php', 'elasticsearch', 'search', 'gradient-descent', 'plot', 'data-visualization', 'scientific-computing', 'mp3', 'normalization', 'google-analytics', 'pruning', 'recommendation-engine', 'gate', 'office365', 'missing-data', 'cors', 'haar-classifier', 'apache-spark', 'feature-detection', 'svm', 'opennlp', 'feature-extraction', 'keyword-search', 'data-structures', 'numpy', 'random', 'java', 'stanford-nlp', 'biometrics', 'c++', 'prediction', 'gpu', 'information-retrieval', 'topic-modeling', 'random-forest', 'id3', 'single-sign-on', 'multilabel-classification', 'lda', 'nltk', 'training-data', 'document-classification', 'arff', 'grouping', 'gradient', 'artificial-intelligence', 'entity-framework', 'feature-selection', 'filesize', 'probability', 'logistic-regression', 'cluster-analysis', 'cluster-computing', 'parameter-passing', 'libsvm', 'regression', 'pattern-recognition', 'backpropagation', 'orange', 'computer-vision', 'conv-neural-network', 'euclidean-distance', 'k-means', 'mathematical-optimization', 'csv', 'macos', 'math', 'text-mining', 'matlab', 'measurement', 'dbn', 'arrays', 'classification', 'linear-regression', 'scipy', 'prolog', 'genetic-algorithm', 'opencv', 'face-recognition', 'quadratic-programming', 'c#', 'vector', 'weka', 'hashmap', 'detection', 'text-classification', 'io', 'optimization', 'encog', 'data-manipulation', 'sparse-matrix', 'pom.xml', 'rbm', 'nlp', 'wordnet', 'auc', 'calibration', 'predictionio', 'elki', 'contour', 'cross-validation', 'simplecv', 'ssas', 'microsoft-account', 'gps', 'kaggle', 'object-detection', 'logarithm', 'image', 'amazon-web-services', 'svmlight', 'hierarchical-clustering', 'q-learning', 'oauth', 'azure', 'hessian-matrix', 'caffe', 'pandas', 'linux'}\n"
      ]
     }
    ],
    "source": [
     "# drop all duplicates in posts\n",
-    "df = pd.DataFrame(stack_posts[0:500])\n",
+    "df = pd.DataFrame(stack_posts[0:n_tag_posts])\n",
     "df = df.drop_duplicates([\"QuestionId\"])\n",
     "df = df.sort_values(by=[\"QuestionId\"])\n",
     "#df.duplicated([\"QuestionId\"])\n",
@@ -86,8 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "hindu-apparel",
+   "execution_count": 62,
+   "id": "8c58058c",
    "metadata": {},
    "outputs": [
     {
@@ -125,34 +129,37 @@
     "\n",
     "word_set = set()\n",
     "regex_pattern = '(<(pre|code|blockquote|a|strike)(.|\\n)*?\\/(pre|code|blockquote|a|strike)>)*?|<(p|b|br|br(.|\\n)*?\\/|sub|sup|em|strong|hr|s|i|ol|ul|li|code)*?>|<\\/(p|b|br|sub|sup|em|strong|s|i|ol|ul|li|div|pre|blockquote|a|code)>|<h(.|\\n)*?>(.|\\n)*?<\\/h(.|\\n)*?>*?|(<(img|div|ol|ul|li)(.|\\n)*?\\/*?>)|\\n'\n",
+    "\n",
     "matcher.add(\"match_technology1\", [technology_pattern1])\n",
     "matcher.add(\"match_technology2\", [technology_pattern2])\n",
     "matcher.add(\"match_technology3\", [technology_pattern3])\n",
     "#matcher.add(\"unmatch_ml_pattern\", [ml_pattern1])\n",
     "\n",
-    "for text in stack_posts[\"AnswerBody\"][500:2000]:\n",
+    "for text in stack_posts[\"AnswerBody\"][n_tag_posts:n_answer_posts]:\n",
     "    text = re.sub(regex_pattern, '', text, flags=re.I)\n",
     "    text = re.sub('\\(|\\)', ' ', text, flags=re.I)    \n",
     "    doc = nlp(text)    \n",
     "    \n",
-    "    matches = matcher(doc)\n",
-    "        \n",
+    "    matches = matcher(doc)    \n",
+    "    match_set = set()\n",
     "    for match_id, start, end in matches:\n",
-    "        word_set.add(doc[start:end])       \n",
+    "        match_set.add(doc[start:end])\n",
+    "    [word_set.add(filtered_span) for filtered_span in filter_spans(match_set)]\n",
+    "    \n",
     "print(\"finished\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ecological-export",
+   "execution_count": 63,
+   "id": "edaaa905",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-14-3141c5bde907>:13: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n",
+      "<ipython-input-63-3141c5bde907>:13: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n",
       "  if tag_doc.similarity(span) >= 0.8:\n"
      ]
     },
@@ -185,31 +192,190 @@
     "                technology_string_list.append(span.text)\n",
     "            technology_counter[span.text] = technology_counter[span.text] + 1\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "print(\"finished\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "administrative-november",
+   "execution_count": 75,
+   "id": "a0c2429f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for technology in technology_list:\n",
-    "    print(technology)\n",
-    "    with open('technology_list.txt', 'a', newline='') as myfile:\n",
+    "\n",
+    "with open('technology_list.txt', 'w', newline='') as myfile:\n",
+    "    myfile.truncate(0)  \n",
+    "    \n",
+    "for technology in technology_list:    \n",
+    "    with open('technology_list.txt', 'a', newline='') as myfile:        \n",
     "        wr = csv.writer(myfile)\n",
     "        wr.writerow([technology])"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "8bd9d10e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Ruby,\n",
+       " Statistics,\n",
+       " Kernel Density Estimation,\n",
+       " R,\n",
+       " R.The R,\n",
+       " r,\n",
+       " Convolutional Neural Networks,\n",
+       " Neural Networks,\n",
+       " Neural Network,\n",
+       " Convolutional Neural Network,\n",
+       " modelsArtificial Neural Networks,\n",
+       " Recurrent Neural Network,\n",
+       " word2vec,\n",
+       " Data,\n",
+       " analysis Kibana,\n",
+       " Analysis ofStructured Data,\n",
+       " data scienceA,\n",
+       " Singular Matrix,\n",
+       " Confusion Matrix,\n",
+       " Matrix,\n",
+       " test-setModel fittingOverall accuracyBetter,\n",
+       " CUDA,\n",
+       " Deep Learning,\n",
+       " Mahout,\n",
+       " Python,\n",
+       " Execute Python,\n",
+       " 0.My Python,\n",
+       " Python API,\n",
+       " bit Python,\n",
+       " Information Security,\n",
+       " System Security,\n",
+       " API,\n",
+       " URLGetRankedNamedEntities API,\n",
+       " Java API,\n",
+       " PAM,\n",
+       " KNN,\n",
+       " knn clusfier;normalize,\n",
+       " SIFT,\n",
+       " text categorization Largeron,\n",
+       " Scikit-learn,\n",
+       " findNeighbors - get,\n",
+       " SQL,\n",
+       " Algorithms,\n",
+       " kernel SVC.If,\n",
+       " Scala,\n",
+       " scala,\n",
+       " MapReduce,\n",
+       " Node.js,\n",
+       " PCA,\n",
+       " example PCA,\n",
+       " Decision Trees,\n",
+       " Decision Tree,\n",
+       " Hadoop,\n",
+       " Unsupervised Deep Learning,\n",
+       " Facebook,\n",
+       " Web Searchand Data Mining,\n",
+       " Data Mining,\n",
+       " Gaussian,\n",
+       " Nearest Neighbors,\n",
+       " Nearest Neighbour,\n",
+       " Regex,\n",
+       " GLM,\n",
+       " PHP,\n",
+       " PhP SDK,\n",
+       " ElasticSearch,\n",
+       " Elasticsearch,\n",
+       " GATE,\n",
+       " Apache Spark,\n",
+       " SVM,\n",
+       " svm,\n",
+       " sklearn SVM,\n",
+       " thing SVM,\n",
+       " Pegasos SVM,\n",
+       " example SVM,\n",
+       " Matlab SVM,\n",
+       " svm Categorical,\n",
+       " SciPy,\n",
+       " NumPy,\n",
+       " Numpy,\n",
+       " Java,\n",
+       " Java SDK,\n",
+       " Java APIs,\n",
+       " Java Library,\n",
+       " Stanford NLP - Produces,\n",
+       " C++,\n",
+       " legacy c++,\n",
+       " Prediction,\n",
+       " GPU,\n",
+       " Word2Vec GPU,\n",
+       " Nvidia GPU,\n",
+       " Random Forest,\n",
+       " Random Forests,\n",
+       " LDA,\n",
+       " NLTK,\n",
+       " NLTK classifiersFor,\n",
+       " NLTK HunPos,\n",
+       " training DATA,\n",
+       " Gradient,\n",
+       " Projected Gradient,\n",
+       " Likelihood,\n",
+       " probability 0.The RandomForest,\n",
+       " Linear Regression,\n",
+       " Orange,\n",
+       " Computer Vision,\n",
+       " info providedUse Computer Vision,\n",
+       " K-means,\n",
+       " k-Fold,\n",
+       " k-fold,\n",
+       " k-means,\n",
+       " MATLAB,\n",
+       " Matlab,\n",
+       " MatLab,\n",
+       " matlab,\n",
+       " DBN,\n",
+       " Improved Classification,\n",
+       " Classification,\n",
+       " Genetic Algorithms,\n",
+       " OpenCV,\n",
+       " OpenCV +,\n",
+       " face recognition taskIn,\n",
+       " Vector,\n",
+       " Avni ClusteringParagraph Vector,\n",
+       " Support Vector Classifier,\n",
+       " Weka,\n",
+       " weka GUI,\n",
+       " HashMap,\n",
+       " RBM,\n",
+       " NLP,\n",
+       " WordNet,\n",
+       " AUC,\n",
+       " cross-validation procedureBut,\n",
+       " SSAS,\n",
+       " kaggle,\n",
+       " Hierarchical Agglomerative Clustering,\n",
+       " Azure HDInsight,\n",
+       " Azure,\n",
+       " Azure Blob,\n",
+       " Caffe,\n",
+       " Pandas,\n",
+       " Linux]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "technology_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "permanent-uzbekistan",
+   "id": "aea54e3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -231,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
