--- a/RQ2.ipynb
+++ b/RQ2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4d7c38ac",
+   "id": "504afedb",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7346283",
+   "id": "a405aba9",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3635fb46",
+   "id": "c60dc4c8",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e4269d84",
+   "id": "7d63cc16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,8 +437,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7feb5f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorizer_with_threshold(text_vectorizer):\n",
+    "    threshold = 0.3\n",
+    "    vec = [i for i,value in enumerate(text_vectorizer.toarray()[0]) if value >= threshold]\n",
+    "    return vec\n",
+    "\n",
+    "def vectorizer_top_n_words(text_vectorizer):    \n",
+    "    n = 3\n",
+    "    vec = np.argsort(text_vectorizer.toarray()).flatten()[::-1][0:n]        \n",
+    "    return vec\n",
+    "\n",
+    "\n",
+    "def vectorizer_top_n_percent(text_vectorizer, vec_len):\n",
+    "    percent = 0.15\n",
+    "    #vec_len = len(vectorizer.get_feature_names())\n",
+    "    n = int(vec_len * percent)\n",
+    "    \n",
+    "    vec = np.argsort(text_vectorizer.toarray()).flatten()[::-1][0:n]            \n",
+    "    return vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a715ddb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_relevant_words(text):\n",
+    "    vectorizer = TfidfVectorizer(stop_words = 'english', min_df = 0.5)\n",
+    "    try:\n",
+    "        text_vectorizer = vectorizer.fit_transform([text])\n",
+    "    except:        \n",
+    "        return False\n",
+    "    relevant_words = []    \n",
+    "    feature_array = np.array(vectorizer.get_feature_names())\n",
+    "\n",
+    "    #tfidf_bigger_than = vectorizer_with_threshold(text_vectorizer)\n",
+    "    #tfidf_bigger_than = vectorizer_with_n_words(text_vectorizer)\n",
+    "    tfidf_bigger_than = vectorizer_top_n_percent(text_vectorizer, len(feature_array))\n",
+    "    relevant_words.append(feature_array[tfidf_bigger_than])\n",
+    "    return relevant_words\n",
+    "    \n",
+    "def add_words_to_counter(relevant_words, filtered_spans):    \n",
+    "    for word in relevant_words[0]:          \n",
+    "        for span in filtered_spans:            \n",
+    "            if word in span.text:    \n",
+    "                topic_counter[span.lemma_] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
-   "id": "ba53b7e4",
+   "id": "6c683c54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c5cf846",
+   "id": "cf059faa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a45b9d1e",
+   "id": "317c4f1d",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "001b0223",
+   "id": "abea3feb",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "3b70eaae",
+   "id": "c0b34886",
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b97f83b8",
+   "id": "99a93592",
    "metadata": {},
    "outputs": [],
    "source": []
