--- a/RQ3.ipynb
+++ b/RQ3.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "2478025d",
+   "execution_count": 1,
+   "id": "7cea690c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,22 +25,38 @@
     "from sklearn.metrics import f1_score\n",
     "import numpy as np\n",
     "import copy\n",
-    "import csv\n",
-    "\n",
-    "# configuration\n",
-    "n_tag_posts = 500\n",
-    "n_answer_posts = 2000"
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "53651360",
+   "execution_count": 2,
+   "id": "e250f04a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# configuration\n",
+    "n_tag_posts = 1000\n",
+    "n_answer_posts = 42636 #max 42636"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1f2eaf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded csv data\n"
+     ]
+    }
+   ],
+   "source": [
     "# Load csv data\n",
-    "filepath = os.path.join(os.getcwd(), 'QueryResults_sample.csv')\n",
+    "filepath = os.path.join(os.getcwd(), 'QueryResults_sample_42636_14_05_21.csv')\n",
     "\n",
     "stack_posts = pd.read_csv(filepath, sep = \",\")\n",
     "\n",
@@ -49,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "7344f623",
+   "execution_count": 4,
+   "id": "8c545c4c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'supervised-learning', 'tic-tac-toe', 'apriori', 'algorithmic-trading', 'sampling', 'projection', 'cascade-classifier', 'signal-processing', 'ruby', 'computer-science', 'cryptography', 'fuzzy-search', 'mallet', 'statistics', 'kernel-density', 'gearman', 'azure-machine-learning-studio', 'r', 'treemodel', 'authentication', 'neural-network', 'tf-idf', 'reinforcement-learning', 'pos-tagger', 'dlib', 'black-box', 'word2vec', 'data-analysis', 'matrix', 'test-data', 'vgg-net', 'cuda', 'vectorization', 'deep-learning', 'pylearn', 'python-3.x', 'liblinear', 'metrics', 'distributed-computing', 'time-series', 'cvx', 'ensemble-learning', 'large-files', 'mahout', 'lstm', 'gnuplot', 'matplotlib', 'probability-density', 'python', 'confusion-matrix', 'precision-recall', 'security', 'api', 'pam', 'tokenize', 'bayesian', 'knn', 'audio', 'sift', 'object-recognition', 'text', 'scikit-learn', 'mysql', 'algorithm', 'kernel', 'cloudera', 'differentiation', 'e-commerce', 'genetic-programming', 'implementation', 'perceptron', 'pybrain', 'scala', 'mapreduce', 'node.js', 'pca', 'decision-tree', 'hadoop', 'linear-algebra', 'chess', 'image-recognition', 'standardized', 'r-caret', 'maven', 'image-processing', 'unsupervised-learning', 'naivebayes', 'viola-jones', 'evolutionary-algorithm', 'twitter', 'data-mining', 'datumbox', 'pmml', 'mixture-model', 'collaborative-filtering', 'reduction', 'mfcc', 'convolution', 'anpr', 'gaussian', 'pattern-matching', 'text-analysis', 'speech-recognition', 'google-analytics-api', 'summarization', 'smo', 'compilation', 'tagged-corpus', 'theano', 'reservoir-sampling', 'nearest-neighbor', 'regex', 'indices', 'mex', 'dirichlet', 'bayesian-networks', 'evaluation', 'apache-spark-mllib', 'glm', 'python-2.7', 'porter-stemmer', 'ranking', 'php', 'elasticsearch', 'search', 'gradient-descent', 'plot', 'data-visualization', 'scientific-computing', 'mp3', 'normalization', 'google-analytics', 'pruning', 'recommendation-engine', 'gate', 'office365', 'missing-data', 'cors', 'haar-classifier', 'apache-spark', 'feature-detection', 'svm', 'opennlp', 'feature-extraction', 'keyword-search', 'data-structures', 'numpy', 'random', 'java', 'stanford-nlp', 'biometrics', 'c++', 'prediction', 'gpu', 'information-retrieval', 'topic-modeling', 'random-forest', 'id3', 'single-sign-on', 'multilabel-classification', 'lda', 'nltk', 'training-data', 'document-classification', 'arff', 'grouping', 'gradient', 'artificial-intelligence', 'entity-framework', 'feature-selection', 'filesize', 'probability', 'logistic-regression', 'cluster-analysis', 'cluster-computing', 'parameter-passing', 'libsvm', 'regression', 'pattern-recognition', 'backpropagation', 'orange', 'computer-vision', 'conv-neural-network', 'euclidean-distance', 'k-means', 'mathematical-optimization', 'csv', 'macos', 'math', 'text-mining', 'matlab', 'measurement', 'dbn', 'arrays', 'classification', 'linear-regression', 'scipy', 'prolog', 'genetic-algorithm', 'opencv', 'face-recognition', 'quadratic-programming', 'c#', 'vector', 'weka', 'hashmap', 'detection', 'text-classification', 'io', 'optimization', 'encog', 'data-manipulation', 'sparse-matrix', 'pom.xml', 'rbm', 'nlp', 'wordnet', 'auc', 'calibration', 'predictionio', 'elki', 'contour', 'cross-validation', 'simplecv', 'ssas', 'microsoft-account', 'gps', 'kaggle', 'object-detection', 'logarithm', 'image', 'amazon-web-services', 'svmlight', 'hierarchical-clustering', 'q-learning', 'oauth', 'azure', 'hessian-matrix', 'caffe', 'pandas', 'linux'}\n"
+      "{'object-detection', 'precision', 'topic-modeling', 'sift', 'self-organizing-maps', 'parallel-processing', 'cloudera', 'azure-virtual-machine', 'pybrain', 'web-scraping', 'web-services', 'gbm', 'contour', 'numpy-ndarray', 'missing-data', 'recommendation-engine', 'powerbi', 'node.js', 'definition', 'hierarchical-clustering', 'rfe', 'evolutionary-algorithm', 'json', 'logarithm', 'mahout', 'prediction', 'security', 'tm', 'linear-regression', 'integration', 'opennlp', 'cors', 'ocr', 'cluster-computing', 'speech-recognition', 'pyspark', 'overlapping', 'data-science', 'scikit-image', 'apache-spark-ml', 'gridworld', 'reduction', 'topic-maps', 'validation', 'python-multiprocessing', 'sql-server', 'bigdata', 'r', 'julia', 'mixture-model', 'tokenize', 'precision-recall', 'audio', 'feedparser', 'tesseract', 'nearest-neighbor', 'r-caret', 'interaction', 'amazon-web-services', 'celery', 'scientific-computing', 'analysis', 'data-visualization', 'optics-algorithm', 'apache-spark-mllib', 'vectorization', 'php', 'auc', 'multithreading', 'text', 'categorical-data', 'matrix-multiplication', 'naivebayes', 'azure', 'compression', 'text-classification', 'dbn', 'excel', 'sqlite', 'anpr', 'one-hot-encoding', 'information-retrieval', 'linux', 'emgucv', 'j48', 'data-manipulation', 'microsoft-account', 'nlp', 'webforms', 'pmml', 'chess', 'database', 'feature-extraction', 'vector', 'pam', 'wordnet', 'tic-tac-toe', 'random', 'regex', 'mathematical-optimization', 'apriori', 'spam-prevention', 'mp3', 'netcdf', 'mahout-recommender', 'evaluation', 'overlap', 'arrays', 'notifications', 'principal-components', 'csv', 'bayesian-networks', 'ruby', 'openimaj', 'single-sign-on', 'pandas', 'machine-translation', 'acl', 'neural-network', 'input', 'feature-selection', 'ranking', 'email-spam', 'smo', 'algorithm', 'sparse-matrix', 'matlab-figure', 'correlation', 'sentiment-analysis', 'entity-framework', 'calculus', 'autosuggest', 'search', 'genetic-programming', 'tagged-corpus', 'opencv', 'data-mining', 'oauth', 'scikits', 'backpropagation', 'parameter-passing', 'artificial-intelligence', 'conv-neural-network', 'dataset', 'dbscan', 'unsupervised-learning', 'matrix-storage', 'prolog', 'nltk', 'glm', 'elki', 'word2vec', 'gnuplot', 'r-package', 'mysql', 'image-recognition', 'performance', 'confusion-matrix', 'ensemble-learning', 'text-mining', 'compilation', 'standardized', 'plot', 'expectation-maximization', 'document-classification', 'quadratic-programming', 'normalization', 'indices', 'logistic-regression', 'textblob', 'c4.5', 'keyword-search', 'multinomial', 'joblib', 'stockquotes', 'sarsa', 'pruning', 'predict', 'numpy', 'python-3.x', 'linear-algebra', 'svm', 'gps', 'bayesian', 'perceptron', 'e-commerce', 'scipy', 'svmlight', 'gate', 'classification', 'pom.xml', 'amazon-s3', 'datumbox', 'ssas', 'filesystems', 'kernel-density', 'linguistics', 'lstm', 'probability', 'kaggle', 'algorithmic-trading', 'azure-machine-learning-studio', 'archive', 'viola-jones', 'mex', 'feature-detection', 'rpart', 'mfcc', 'data-representation', 'pylearn', 'gearman', 'mallet', 'resize', 'filesize', 'computer-vision', 'genetic-algorithm', 'large-files', 'kernel', 'math', 'scikit-learn', 'cuda', 'projection', 'haar-classifier', 'cross-validation', 'vgg-net', 'detection', 'arff', 'solr', 'lua', 'libsvm', 'implementation', 'som', 'summarization', 'rbm', 'gensim', 'cluster-analysis', 'vowpalwabbit', 'logging', 'distributed-computing', 'google-analytics', 'encog', 'c++', 'k-means', 'hadoop', 'signal-processing', 'euclidean-distance', 'optimization', 'mapreduce', 'freebase', 'pickle', 'multilabel-classification', 'regression', 'model', 'treemodel', 'matlab', 'tf-idf', 'matplotlib', 'spss-modeler', 'modeling', 'knn', 'matrix', 'caffe', 'html', 'macos', 'quicksort', 'reservoir-sampling', 'gpu', 'black-box', 'gaussian', 'predictionio', 'python', 'training-data', 'orange', 'moses', 'alchemyapi', 'adaboost', 'nupic', 'ubuntu-12.04', 'background-subtraction', 'pattern-matching', 'subsequence', 'authentication', 'c#', 'weka', 'hessian-matrix', 'pos-tagger', 'supervised-learning', 'porter-stemmer', 'statistics', 'sampling', 'dlib', 'probability-density', 'azureservicebus', 'similarity', 'grid-search', 'outliers', 'vision', 'pca', 'maven', 'etl', 'roc', 'apache-spark', 'netflix', 'cascade-classifier', '7zip', 'matconvnet', 'elasticsearch', 'matrix-inverse', 'dictionary', 'javascript', 'gradient-descent', 'function', 'google-analytics-api', 'intrusion-detection', 'differentiation', 'q-learning', 'hashmap', 'grouping', 'api', 'pydot', 'convolution', 'java', 'object-recognition', 'dataframe', 'vb.net', 'accord.net', 'io', 'xml', 'cvx', 'deep-learning', 'theano', 'computer-science', 'collaborative-filtering', 'sorting', 'azure-sql-database', 'data-analysis', 'metrics', 'office365', 'calibration', 'face-recognition', 'liblinear', 'wikipedia', 'cryptography', 'information-theory', 'image', 'named-entity-recognition', 'text-analysis', 'twitter', 'data-structures', 'stanford-nlp', 'time-series', 'dirichlet', 'pattern-recognition', 'biometrics', 'deployment', 'decision-tree', 'id3', 'image-processing', 'python-2.7', 'simplecv', 'non-linear-regression', 'scala', 'fuzzy-search', 'model-fitting', 'lda', 'torch', 'hungarian-algorithm', 'apache-flink', 'gradient', 'join', 'azure-scheduler', 'test-data', 'measurement', 'random-forest', 'snort', 'reinforcement-learning', 'lucene'}\n"
      ]
     }
    ],
@@ -90,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "8c58058c",
+   "execution_count": 9,
+   "id": "1276cc73",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +128,7 @@
     "                      ]\n",
     "\n",
     "technology_pattern2 = [{'OP': '+', 'POS': 'PROPN'},\n",
-    "                       {'TEXT': '-', 'OP': '+'},\n",
+    "                       {'TEXT': '-', 'OP': '?'},\n",
     "                       {'POS': 'VERB', 'OP': '+'}\n",
     "                      ]\n",
     "\n",
@@ -121,13 +137,9 @@
     "                       {'POS': 'PROPN', 'OP': '+'}\n",
     "                      ]\n",
     "\n",
-    "ml_pattern1 = [{'LOWER': 'machine', 'OP': '!'},\n",
-    "                       #{'TEXT': '-', 'OP': '!'},\n",
-    "                       {'LOWER': 'learning', 'OP': '!'}\n",
-    "                      ]\n",
-    "\n",
     "\n",
     "word_set = set()\n",
+    "word_list = []\n",
     "regex_pattern = '(<(pre|code|blockquote|a|strike)(.|\\n)*?\\/(pre|code|blockquote|a|strike)>)*?|<(p|b|br|br(.|\\n)*?\\/|sub|sup|em|strong|hr|s|i|ol|ul|li|code)*?>|<\\/(p|b|br|sub|sup|em|strong|s|i|ol|ul|li|div|pre|blockquote|a|code)>|<h(.|\\n)*?>(.|\\n)*?<\\/h(.|\\n)*?>*?|(<(img|div|ol|ul|li)(.|\\n)*?\\/*?>)|\\n'\n",
     "\n",
     "matcher.add(\"match_technology1\", [technology_pattern1])\n",
@@ -144,22 +156,39 @@
     "    match_set = set()\n",
     "    for match_id, start, end in matches:\n",
     "        match_set.add(doc[start:end])\n",
-    "    [word_set.add(filtered_span) for filtered_span in filter_spans(match_set)]\n",
+    "    [word_list.append(filtered_span) for filtered_span in filter_spans(match_set)]    \n",
     "    \n",
     "print(\"finished\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "edaaa905",
+   "execution_count": 15,
+   "id": "7701cf8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_list\n",
+    "with open('word_list.txt', 'w', newline='') as myfile:\n",
+    "    myfile.truncate(0)  \n",
+    "    \n",
+    "for word in word_list:    \n",
+    "    with open('word_list.txt', 'a', newline='', encoding=\"utf-8\") as myfile:                \n",
+    "        wr = csv.writer(myfile)\n",
+    "        wr.writerow([word])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bdd3a707",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-63-3141c5bde907>:13: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n",
+      "<ipython-input-16-4e2305201fa3>:15: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n",
       "  if tag_doc.similarity(span) >= 0.8:\n"
      ]
     },
@@ -174,9 +203,11 @@
    "source": [
     "# Term similarity\n",
     "\n",
+    "word_set = set(word_list)\n",
+    "\n",
     "# loop through relavant words and get their vectors\n",
     "technology_list = []\n",
-    "technology_string_list = []\n",
+    "technology_string_set = set()\n",
     "technology_counter = Counter()\n",
     "for tag in tag_set:\n",
     "    term_vector = []    \n",
@@ -185,11 +216,9 @@
     "    \n",
     "    for i,span in enumerate(word_set):        \n",
     "        if tag_doc.similarity(span) >= 0.8:\n",
-    "        # very slow\n",
-    "        # if cosine_similarity([tag_vector], [span_vector])[0][0] >= 0.7:\n",
-    "            if span.text not in technology_string_list:\n",
-    "                technology_list.append(span)\n",
-    "                technology_string_list.append(span.text)\n",
+    "            if span.text not in technology_string_set:\n",
+    "                technology_list.append(span.text)                \n",
+    "                technology_string_set.add(span.text.lower())\n",
     "            technology_counter[span.text] = technology_counter[span.text] + 1\n",
     "\n",
     "print(\"finished\")"
@@ -197,185 +226,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "a0c2429f",
+   "execution_count": 19,
+   "id": "5443bf59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "with open('technology_list.txt', 'w', newline='') as myfile:\n",
     "    myfile.truncate(0)  \n",
     "    \n",
-    "for technology in technology_list:    \n",
-    "    with open('technology_list.txt', 'a', newline='') as myfile:        \n",
+    "for technology in technology_string_set:    \n",
+    "    with open('technology_list.txt', 'a', newline='', encoding=\"utf-8\") as myfile:        \n",
     "        wr = csv.writer(myfile)\n",
     "        wr.writerow([technology])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "8bd9d10e",
+   "execution_count": null,
+   "id": "2ee4456d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Ruby,\n",
-       " Statistics,\n",
-       " Kernel Density Estimation,\n",
-       " R,\n",
-       " R.The R,\n",
-       " r,\n",
-       " Convolutional Neural Networks,\n",
-       " Neural Networks,\n",
-       " Neural Network,\n",
-       " Convolutional Neural Network,\n",
-       " modelsArtificial Neural Networks,\n",
-       " Recurrent Neural Network,\n",
-       " word2vec,\n",
-       " Data,\n",
-       " analysis Kibana,\n",
-       " Analysis ofStructured Data,\n",
-       " data scienceA,\n",
-       " Singular Matrix,\n",
-       " Confusion Matrix,\n",
-       " Matrix,\n",
-       " test-setModel fittingOverall accuracyBetter,\n",
-       " CUDA,\n",
-       " Deep Learning,\n",
-       " Mahout,\n",
-       " Python,\n",
-       " Execute Python,\n",
-       " 0.My Python,\n",
-       " Python API,\n",
-       " bit Python,\n",
-       " Information Security,\n",
-       " System Security,\n",
-       " API,\n",
-       " URLGetRankedNamedEntities API,\n",
-       " Java API,\n",
-       " PAM,\n",
-       " KNN,\n",
-       " knn clusfier;normalize,\n",
-       " SIFT,\n",
-       " text categorization Largeron,\n",
-       " Scikit-learn,\n",
-       " findNeighbors - get,\n",
-       " SQL,\n",
-       " Algorithms,\n",
-       " kernel SVC.If,\n",
-       " Scala,\n",
-       " scala,\n",
-       " MapReduce,\n",
-       " Node.js,\n",
-       " PCA,\n",
-       " example PCA,\n",
-       " Decision Trees,\n",
-       " Decision Tree,\n",
-       " Hadoop,\n",
-       " Unsupervised Deep Learning,\n",
-       " Facebook,\n",
-       " Web Searchand Data Mining,\n",
-       " Data Mining,\n",
-       " Gaussian,\n",
-       " Nearest Neighbors,\n",
-       " Nearest Neighbour,\n",
-       " Regex,\n",
-       " GLM,\n",
-       " PHP,\n",
-       " PhP SDK,\n",
-       " ElasticSearch,\n",
-       " Elasticsearch,\n",
-       " GATE,\n",
-       " Apache Spark,\n",
-       " SVM,\n",
-       " svm,\n",
-       " sklearn SVM,\n",
-       " thing SVM,\n",
-       " Pegasos SVM,\n",
-       " example SVM,\n",
-       " Matlab SVM,\n",
-       " svm Categorical,\n",
-       " SciPy,\n",
-       " NumPy,\n",
-       " Numpy,\n",
-       " Java,\n",
-       " Java SDK,\n",
-       " Java APIs,\n",
-       " Java Library,\n",
-       " Stanford NLP - Produces,\n",
-       " C++,\n",
-       " legacy c++,\n",
-       " Prediction,\n",
-       " GPU,\n",
-       " Word2Vec GPU,\n",
-       " Nvidia GPU,\n",
-       " Random Forest,\n",
-       " Random Forests,\n",
-       " LDA,\n",
-       " NLTK,\n",
-       " NLTK classifiersFor,\n",
-       " NLTK HunPos,\n",
-       " training DATA,\n",
-       " Gradient,\n",
-       " Projected Gradient,\n",
-       " Likelihood,\n",
-       " probability 0.The RandomForest,\n",
-       " Linear Regression,\n",
-       " Orange,\n",
-       " Computer Vision,\n",
-       " info providedUse Computer Vision,\n",
-       " K-means,\n",
-       " k-Fold,\n",
-       " k-fold,\n",
-       " k-means,\n",
-       " MATLAB,\n",
-       " Matlab,\n",
-       " MatLab,\n",
-       " matlab,\n",
-       " DBN,\n",
-       " Improved Classification,\n",
-       " Classification,\n",
-       " Genetic Algorithms,\n",
-       " OpenCV,\n",
-       " OpenCV +,\n",
-       " face recognition taskIn,\n",
-       " Vector,\n",
-       " Avni ClusteringParagraph Vector,\n",
-       " Support Vector Classifier,\n",
-       " Weka,\n",
-       " weka GUI,\n",
-       " HashMap,\n",
-       " RBM,\n",
-       " NLP,\n",
-       " WordNet,\n",
-       " AUC,\n",
-       " cross-validation procedureBut,\n",
-       " SSAS,\n",
-       " kaggle,\n",
-       " Hierarchical Agglomerative Clustering,\n",
-       " Azure HDInsight,\n",
-       " Azure,\n",
-       " Azure Blob,\n",
-       " Caffe,\n",
-       " Pandas,\n",
-       " Linux]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "technology_list"
+    "technology_string_set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aea54e3d",
+   "id": "ecbb7f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len_tp = \n",
+    "len_fp = \n",
+    "\n",
+    "precision = len_tp/(len_tp + len_fp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb33bbed",
    "metadata": {},
    "outputs": [],
    "source": []
